--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -25,6 +25,9 @@ Vagrant.configure("2") do |config|
                 v.memory = 2048
                 # 设置虚拟机的CPU个数
                 v.cpus = 2
+				# disable seriel port to address the issue when using package.box:
+				# Stderr: VBoxManage.exe: error: RawFile#0 failed to create the raw output file /path/to/ubuntu-xenial-16.04-cloudimg-console.log (VERR_PATH_NOT_FOUND)
+				v.customize [ "modifyvm", :id, "--uartmode1", "disconnected"  ]
             end
 
             # 使用shell脚本进行软件安装和配置
