--- a/ubuntu/home/.tmux.conf
+++ b/ubuntu/home/.tmux.conf
@@ -1,5 +1,5 @@
 set-window-option -g mode-keys vi
-set-window-option -g utf8 on
+#set-window-option -g utf8 on
 #set -g mouse on
 
 set -g @plugin 'tmux-plugins/tpm'
