--- a/ubuntu/home/.tmux.conf
+++ b/ubuntu/home/.tmux.conf
@@ -1,3 +1,6 @@
+set -g prefix C-j
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
 set-window-option -g mode-keys vi
 #set-window-option -g utf8 on
 #set -g mouse on
@@ -11,5 +14,4 @@ set -g @continuum-restore 'on'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-processes 'ssh'
 run '~/.tmux/plugins/tpm/tpm'
-
 
