--- a/ubuntu/home/.tmux.conf
+++ b/ubuntu/home/.tmux.conf
@@ -4,6 +4,7 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 set-window-option -g mode-keys vi
 #set-window-option -g utf8 on
 #set -g mouse on
+set -s -g escape-time 0
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
